// proto 파일의 버전을 서술, 문법에 해당함
syntax = "proto3";

// proto 가 빌드될 target package. 생략되면 classpath:/  에 빌드됨
package com.glqdlt.ex.grpcexam.model;


enum Sex{
    MAN = 0;
    WOMAN = 1;
}

service UserService {
    rpc getUserDetail (UserRequest) returns (UserDetail) {};
}

message UserRequest {
    string id = 1;
}

message UserDetail {
    string id = 1;
    string name = 2;
    int32 age = 6;
    Sex sex = 4;
    string password = 3;
    string address = 5;
    repeated string hobbies = 7;
    map<string, string> auth = 8;
}